src/test/ui/wf/wf-in-obj-type-trait.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-obj-type-trait.rs:11:5
   |
LL | struct MustBeCopy<T:Copy> {
   | ------------------------- required by `MustBeCopy`
...
LL |     x: dyn Object<MustBeCopy<T>>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
help: consider restricting this type parameter with `T: std::marker::Copy`
  --> $DIR/wf-in-obj-type-trait.rs:9:12
   |
LL | struct Bar<T> {
   |            ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
